# student-schedule

./: .gitignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  README.md  dev.Dockerfile  dev.docker-compose.yaml  docker-compose.yaml  example.env  frontend-dev.docker-compose.yaml  index.html  prod.example.env  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
assets/: AdminView-B1yPJ3_w.js  AdminView-BG3ThrIb.js  AdminView-BlXdrmG2.js  AdminView-C1XLdFQB.js  AdminView-CPccsn4m.js  AdminView-CdCTLrfV.js  AdminView-Cp2qcTd9.js  AdminView-Cyib_6vs.js  AdminView-D5X21sYX.js  AdminView-DR5-Rfz3.js  AdminView-Hy9ttebU.js  AnyLink-BeVkD_y0.js  AnyLink-CDicfk--.css  AnyLink-CwkD27St.js  AnyLink-DMnjoF3k.js  AnyLink-DjKMJNu4.js  AnyLink-Djouuw_0.js  AnyLink-DpxaY_Lw.css  AnyLink-JevVOolZ.js  AnyLink-hkn1Z6z6.js  AnyLink-p20-Kenm.js  CombinedScheduleItem-BMdynbsx.js  CombinedScheduleItem-Ba2cWC_o.css  CombinedScheduleItem-BovvZerl.js  CombinedScheduleItem-C57CJVg4.css  CombinedScheduleItem-CwZoX8tx.js  GroupDetailView-0AP_JdQZ.js  GroupDetailView-BMtLLU11.js  GroupDetailView-BOaDsGZ-.js  GroupDetailView-BTcW8FLt.js  GroupDetailView-C57dkO86.js  GroupDetailView-CbQGF8en.js  GroupDetailView-Ce20SKcH.js  GroupDetailView-CgaseB53.js  GroupDetailView-CiaTfqoo.js  GroupDetailView-CkkxiK66.js  GroupDetailView-CrSyr9-A.js  GroupDetailView-Cuqy6bBt.js  GroupDetailView-CwSRnPnq.js  GroupDetailView-CyglWHJW.js  (+516 more)
frontend/: Dockerfile  README.md  components.d.ts  dev.docker-compose.yaml  example.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vue.config.js
scripts/: default_admin.py  make_migrations.py  makemigrations.py  migrate.py  populate_groups.py
(+212 files in other folders)
